--- a/notebooks/CSV_Conversion_Weather_Merge.ipynb
+++ b/notebooks/CSV_Conversion_Weather_Merge.ipynb
@@ -44,6 +44,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b2951fa8",
    "metadata": {},
    "outputs": [],
