Adds explanation markups to the csv conversion notebook (fix)

--- a/notebooks/CSV_Conversion_Weather_Merge.ipynb
+++ b/notebooks/CSV_Conversion_Weather_Merge.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2aaa2497",
+   "metadata": {},
+   "source": [
+    "# Format Conversions & Weather Data\n",
+    "---\n",
+    "In this notebook, we build our weather dataset and also convert our CSV file to a parquet file. This approach helps us in later stages of the project to be able to read only specific columns from the entire data set. Parquet file are columnar and much faster to work with than CSVs.\n",
+    "\n",
+    "Furthermore, we use the gathered weather informations to build our weather dataset. This dataset has the trip id and start time as foreign keys, which will be used later for merging our data frames.\n",
+    "\n",
+    "The weather dataset will have the following attributes:\n",
+    "- Temperature (C)\n",
+    "- Humidity(%)\n",
+    "- Pressure(hPa)\n",
+    "- Wind Direction(Meteoro. Degree)\n",
+    "- Wind Speed(M/S)\n",
+    "\n",
+    "_All functions that are used for data conversion and bulding the weather data frame are documented in the utils.py package_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6b471428",
@@ -24,6 +45,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "977252c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Run only if you have enough local memory for the transformation\n",
+    "#utils.write_parquet('../data/Taxi_Trips.csv', 'Taxi_Trips.parquet'):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4241b7b3",
    "metadata": {},
    "outputs": [],
@@ -38,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#The chicago data frame is passed to create foreign key refrences in the weather dataset\n",
     "weather_df = utils.add_weather_data(chicago_df)"
    ]
   },
@@ -68,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
