--- a/notebooks/Cleaning.ipynb
+++ b/notebooks/Cleaning.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning\n",
+    "---\n",
+    "This notebook cleans the whole dataset of Taxi trips in Chicago in 2015 and adds several cyclical features such as seperated columns for the trip start/end month, day, hour, weekday and is weekend.\n",
+    "\n",
+    "The cleaning function reads as default the `Taxi_Trips.parquet` in the data directory and saves the cleaned dataframe later in the same directory named as `Taxi_Trips_cleaned.parquet`.\n",
+    "As a first step after reading the basic dataframe, we remove faulty data such as negative numeric values in the trip duration, distance and the total amount as well as invalid spatial entries by checking if the Pickup/Dropoff Census Tract as well as the Community Area columns are both null at the same time.\n",
+    "Next, we apply the z-score algorithm to eliminate outlier data by defining data entries with a standard deviation of more than two as outliers.\n",
+    "Afterwards cyclical features are added as mentioned above and we convert trip miles to kilometers and trip seconds to minutes before the data is saved as `Taxi_Trips_cleaned.parquet`.\n",
+    "\n",
+    "_All functions that are used for cleaning the data set within reading (writing) it from (to) a parquet file are documented in the `cleaning.py` & `utils.py` package._"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,9 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "import cleaning\n",
-    "import utils\n",
-    "import seaborn as sns"
+    "import cleaning"
    ]
   },
   {
@@ -67,72 +81,6 @@
    "source": [
     "cleaning.clean_dataset(verbose=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "after = utils.read_parquet(\"Taxi_Trips_cleaned.parquet\")\n",
-    "after"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "for col in [\n",
-    "            \"Trip Seconds\",\n",
-    "            \"Trip Miles\",\n",
-    "            \"Fare\",\n",
-    "            \"Tips\",\n",
-    "            \"Tolls\",\n",
-    "            \"Extras\",\n",
-    "            \"Trip Total\"\n",
-    "        ]:\n",
-    "    sns.displot(after, x=col, kind=\"kde\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "after.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "after.eq('').sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "after.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
