--- a/notebooks/Cleaning.ipynb
+++ b/notebooks/Cleaning.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "cleaning.clean_dataset(verbose=True)"
+    "cleaning.clean_dataset(file=\"Taxi_Trips.parquet\",verbose=True)"
    ]
   }
  ],
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
