--- a/notebooks/Cleaning.ipynb
+++ b/notebooks/Cleaning.ipynb
@@ -8,10 +8,13 @@
     "---\n",
     "This notebook cleans the whole dataset of Taxi trips in Chicago in 2015 and adds several cyclical features such as seperated columns for the trip start/end month, day, hour, weekday and is weekend.\n",
     "\n",
-    "The cleaning function reads as default the `Taxi_Trips.parquet` in the data directory and saves the cleaned dataframe later in the same directory named as `Taxi_Trips_cleaned.parquet`.\n",
-    "As a first step after reading the basic dataframe, we remove faulty data such as negative numeric values in the trip duration, distance and the total amount as well as invalid spatial entries by checking if the Pickup/Dropoff Census Tract as well as the Community Area columns are both null at the same time.\n",
-    "Next, we apply the z-score algorithm to eliminate outlier data by defining data entries with a standard deviation of more than two as outliers.\n",
-    "Afterwards cyclical features are added as mentioned above and we convert trip miles to kilometers and trip seconds to minutes before the data is saved as `Taxi_Trips_cleaned.parquet`.\n",
+    "Cleaning the dataset follows several steps:\n",
+    "* The cleaning function reads as default the `Taxi_Trips.parquet` in the data directory and saves the cleaned dataframe later in the same directory named as `Taxi_Trips_cleaned.parquet`.\n",
+    "* As a first step after reading the basic dataframe, we remove faulty data such as negative numeric values in the trip duration, distance and the total amount as well as invalid spatial entries by checking if the Pickup/Dropoff Census Tract as well as the Community Area columns are both null at the same time.\n",
+    "* Next, we apply the z-score algorithm to eliminate outlier data by defining data entries with a standard deviation of more than two as outliers. Below is exemplary a standard normal distribution illustrated where a z-score of 2 leads to an elimination of approx. 4.6% standard normal distributed entries.\n",
+    "* Afterwards cyclical features are added as mentioned above and we convert trip miles to kilometers and trip seconds to minutes before the data is saved as `Taxi_Trips_cleaned.parquet`.\n",
+    "\n",
+    "![Z-Score](https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/The_Normal_Distribution.svg/1280px-The_Normal_Distribution.svg.png)\n",
     "\n",
     "_All functions that are used for cleaning the data set within reading (writing) it from (to) a parquet file are documented in the `cleaning.py` & `utils.py` package._"
    ]
@@ -99,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
