Add a second approach that uses sklearns TimeSeriesSplit

--- a/notebooks/prediction_svm.ipynb
+++ b/notebooks/prediction_svm.ipynb
@@ -391,6 +391,266 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second approach from https://medium.com/keita-starts-data-science/time-series-split-with-scikit-learn-74f5be38489e\n",
+    "y = daily_demand.pop(\"Demand (D)\")\n",
+    "X = daily_demand.drop([\"Trip Start Timestamp\"], axis=1)\n",
+    "\n",
+    "X_train = X[:int(X.shape[0]*0.8)] # for 0.7 its the 13.09.2015 and for 0.8 its the 19.10.2015\n",
+    "X_test = X[int(X.shape[0]*0.8):]\n",
+    "y_train = y[:int(X.shape[0]*0.8)]\n",
+    "y_test = y[int(X.shape[0]*0.8):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f6ef9d385005463681dba7f6330fa78f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAIN: [   0    1    2 ... 3363 3364 3365] VALIDATION: [3366 3367 3368 ... 6729 6730 6731]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import TimeSeriesSplit, GridSearchCV\n",
+    "from sklearn.svm import SVR\n",
+    "from tqdm import tqdm_notebook\n",
+    "\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "scores = []\n",
+    "for tr_index, val_index in tqdm_notebook(tscv.split(X_train)):\n",
+    "    print(\"TRAIN:\", tr_index, \"VALIDATION:\", val_index)\n",
+    "    X_tr, X_val = X_train.loc[tr_index], X_train.loc[val_index]\n",
+    "    y_tr, y_val = y_train.loc[tr_index], y_train.loc[val_index]\n",
+    "        \n",
+    "    parameters = {'kernel':('linear', 'rbf'), 'C':[1, 10, 100]}\n",
+    "    svr = SVR()\n",
+    "    clf = GridSearchCV(svr, parameters)\n",
+    "    clf.fit(X_tr, y_tr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <th>std_fit_time</th>\n",
+       "      <th>mean_score_time</th>\n",
+       "      <th>std_score_time</th>\n",
+       "      <th>param_C</th>\n",
+       "      <th>param_kernel</th>\n",
+       "      <th>params</th>\n",
+       "      <th>split0_test_score</th>\n",
+       "      <th>split1_test_score</th>\n",
+       "      <th>split2_test_score</th>\n",
+       "      <th>split3_test_score</th>\n",
+       "      <th>split4_test_score</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>std_test_score</th>\n",
+       "      <th>rank_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30.099232</td>\n",
+       "      <td>3.150788</td>\n",
+       "      <td>0.915923</td>\n",
+       "      <td>0.013788</td>\n",
+       "      <td>1</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>{'C': 1, 'kernel': 'linear'}</td>\n",
+       "      <td>-0.067180</td>\n",
+       "      <td>-0.066855</td>\n",
+       "      <td>-0.066889</td>\n",
+       "      <td>-0.067056</td>\n",
+       "      <td>-0.062898</td>\n",
+       "      <td>-0.066176</td>\n",
+       "      <td>0.001643</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.443325</td>\n",
+       "      <td>0.100911</td>\n",
+       "      <td>4.071352</td>\n",
+       "      <td>0.107611</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
+       "      <td>-0.076213</td>\n",
+       "      <td>-0.074807</td>\n",
+       "      <td>-0.074842</td>\n",
+       "      <td>-0.075839</td>\n",
+       "      <td>-0.072159</td>\n",
+       "      <td>-0.074772</td>\n",
+       "      <td>0.001418</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.320247</td>\n",
+       "      <td>2.700932</td>\n",
+       "      <td>0.927999</td>\n",
+       "      <td>0.007206</td>\n",
+       "      <td>10</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>{'C': 10, 'kernel': 'linear'}</td>\n",
+       "      <td>-0.041410</td>\n",
+       "      <td>-0.030557</td>\n",
+       "      <td>-0.035402</td>\n",
+       "      <td>-0.039948</td>\n",
+       "      <td>-0.034882</td>\n",
+       "      <td>-0.036440</td>\n",
+       "      <td>0.003876</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.258576</td>\n",
+       "      <td>0.029741</td>\n",
+       "      <td>4.054072</td>\n",
+       "      <td>0.048625</td>\n",
+       "      <td>10</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>{'C': 10, 'kernel': 'rbf'}</td>\n",
+       "      <td>-0.072812</td>\n",
+       "      <td>-0.071688</td>\n",
+       "      <td>-0.071718</td>\n",
+       "      <td>-0.072721</td>\n",
+       "      <td>-0.068688</td>\n",
+       "      <td>-0.071525</td>\n",
+       "      <td>0.001497</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45.951010</td>\n",
+       "      <td>7.583730</td>\n",
+       "      <td>0.936804</td>\n",
+       "      <td>0.023408</td>\n",
+       "      <td>100</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>{'C': 100, 'kernel': 'linear'}</td>\n",
+       "      <td>-0.003912</td>\n",
+       "      <td>-0.045508</td>\n",
+       "      <td>0.030224</td>\n",
+       "      <td>0.017465</td>\n",
+       "      <td>0.013902</td>\n",
+       "      <td>0.002434</td>\n",
+       "      <td>0.026338</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8.702239</td>\n",
+       "      <td>0.074813</td>\n",
+       "      <td>4.210126</td>\n",
+       "      <td>0.063865</td>\n",
+       "      <td>100</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>{'C': 100, 'kernel': 'rbf'}</td>\n",
+       "      <td>-0.069865</td>\n",
+       "      <td>-0.069127</td>\n",
+       "      <td>-0.069297</td>\n",
+       "      <td>-0.070177</td>\n",
+       "      <td>-0.065951</td>\n",
+       "      <td>-0.068883</td>\n",
+       "      <td>0.001514</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mean_fit_time  std_fit_time  mean_score_time  std_score_time param_C  \\\n",
+       "0      30.099232      3.150788         0.915923        0.013788       1   \n",
+       "1       8.443325      0.100911         4.071352        0.107611       1   \n",
+       "2      41.320247      2.700932         0.927999        0.007206      10   \n",
+       "3       8.258576      0.029741         4.054072        0.048625      10   \n",
+       "4      45.951010      7.583730         0.936804        0.023408     100   \n",
+       "5       8.702239      0.074813         4.210126        0.063865     100   \n",
+       "\n",
+       "  param_kernel                          params  split0_test_score  \\\n",
+       "0       linear    {'C': 1, 'kernel': 'linear'}          -0.067180   \n",
+       "1          rbf       {'C': 1, 'kernel': 'rbf'}          -0.076213   \n",
+       "2       linear   {'C': 10, 'kernel': 'linear'}          -0.041410   \n",
+       "3          rbf      {'C': 10, 'kernel': 'rbf'}          -0.072812   \n",
+       "4       linear  {'C': 100, 'kernel': 'linear'}          -0.003912   \n",
+       "5          rbf     {'C': 100, 'kernel': 'rbf'}          -0.069865   \n",
+       "\n",
+       "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
+       "0          -0.066855          -0.066889          -0.067056          -0.062898   \n",
+       "1          -0.074807          -0.074842          -0.075839          -0.072159   \n",
+       "2          -0.030557          -0.035402          -0.039948          -0.034882   \n",
+       "3          -0.071688          -0.071718          -0.072721          -0.068688   \n",
+       "4          -0.045508           0.030224           0.017465           0.013902   \n",
+       "5          -0.069127          -0.069297          -0.070177          -0.065951   \n",
+       "\n",
+       "   mean_test_score  std_test_score  rank_test_score  \n",
+       "0        -0.066176        0.001643                3  \n",
+       "1        -0.074772        0.001418                6  \n",
+       "2        -0.036440        0.003876                2  \n",
+       "3        -0.071525        0.001497                5  \n",
+       "4         0.002434        0.026338                1  \n",
+       "5        -0.068883        0.001514                4  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(clf.cv_results_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
