--- a/notebooks/eda_starttime.ipynb
+++ b/notebooks/eda_starttime.ipynb
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "source": [
     "During nighttime, the demand on weekend (saturday, sunday) is significantly higher than on weekdays.\n",
-    "That's very likely to be a cause of people driving after enjoying Chicago's nightlife.\n",
+    "That's very likely to be a cause of people driving home after enjoying Chicago's nightlife.\n",
     "The overall peak demand takes place on friday evenings.\n",
     "\n",
     "In the morning, the demand is equally distributed during weekdays but drops off on the weekend. It can therefore be\n",
@@ -411,7 +411,7 @@
     "center of chicago. Exemplary areas are Lincoln Park, Pilsen and West Town. These districts are known for their\n",
     "gastronomy and nightlife facilities.\n",
     "\n",
-    "Besides the urban center areas, the airport areas have peak demand hours during the evening.\n",
+    "Besides the urban center areas, also the airport areas have peak demand hours during the evening.\n",
     "This is very likely a result of Chicago' business employees, who depart from the airport in\n",
     "the early hours of the day for business related flights and arrive back in Chicago in the evening, taking taxis to\n",
     "drive back home.\n",
