Adjust metrics in the final table

--- a/notebooks/prediction_svm.ipynb
+++ b/notebooks/prediction_svm.ipynb
@@ -6548,7 +6548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Overall SVR Metrics (TODO)**"
+    "**Overall SVR Metrics (TODO: 6H & Hourly)**"
    ]
   },
   {
@@ -6557,10 +6557,10 @@
    "source": [
     "| Model | Spatial Resolution | MAE | MAPE | sMAPE | R2 | RMSE | MSE | Max Res. Error |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
-    "| **Daily** | Community Areas | 178.72 | 33.98% | 38.07% | 93.20% | 766.17 | 587015.87 | 12184.10\n",
-    "|  | Hex 7 | 204.95 | 35.46% | 39.64% | 90.73% | 887.56 | 787777.37 | 17869.43\n",
-    "|  | Hex 6 | 551.74 | 45.45% | 32.10% | 91.28% | 2025.03 | 4100764.0 | 32912.37\n",
-    "| **6H** | Community Areas | 69.33 | 49.52% | 91.16% | 89.26% | 300.98 | 90592.17 | 7447.84\n",
+    "| **Daily** | Community Areas | 188.07 | 46.38% | 35.82% | 93.76% | 736.76 | 542813.29 | 13915.17\n",
+    "|  | Hex 7 | 178.72 | 44.40% | 35.01% | 93.94% | 718.00 | 515523.77 | 13031.19\n",
+    "|  | Hex 6 | 551.74 | 45.457% | 32.10% | 91.16% | 2040.30 | 4162838.32 | 31007.69\n",
+    "| **6H** | Community Areas | 69.33 | 49.52% | 37.09% | 89.26% | 300.98 | 90592.17 | 7447.84\n",
     "|  | Hex 7 | 72.51 | 49.18% | 36.86% | 90.32% | 293.96 | 86414.59 | 7918.62\n",
     "|  | Hex 6 | 145.04 | 49.00% | 34.64% | 92.65% | 536.15 | 287457.34 | 9768.53\n",
     "| **Hourly** | Community Areas | 17.53 | 48.91% | 35.53% | 89.97% | 61.57 | 3791.27 | 1492.38\n",
