edit clustering analysis for first feature combination edit first text passage add unfinished comparison

--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -13,27 +13,28 @@
     "In this notebook, we use clustering algorithms to find different types of taxi trip patterns and cluster them as various\n",
     "customer types.\n",
     "These findings can be used for marketing purposes and managerial decisions, taken by the taxi companies of Chicago.\n",
-    "To identify these clusters, we take soft- and hard-clustering approaches with bi- and multi-dimensional feature\n",
-    "dimensions.\n",
+    "To identify these clusters, we take soft- and hard-clustering approaches with multi-dimensional feature combinations.\n",
     "The results get visualized with the help of different types of visualizations, adapted to the observed dimension degree.\n",
     "\n",
-    "We proceeded as follows:\n",
+    "We proceeded as follows for each feature combination:\n",
     "\n",
     "- Data preparation\n",
     "- Soft-Clustering\n",
     "    - Gaussian Mixture Model (GMM)\n",
     "    - Determine number of clusters with BIC-and Silhouette-Analysis\n",
     "    - Run GMM / Result Visualization\n",
+    "    - Summary & Analysis\n",
     "- Hard-Clustering\n",
+    "    - K-Means\n",
     "    - Determine number of clusters with Elbow-Method\n",
-    "    - Run k-Means-Algorithm / result visualization\n",
-    "- Compare results and identify customer types\n",
-    "- Conclusion and outlook"
+    "    - Run k-Means-Algorithm / Result visualization\n",
+    "    - Summary & Analysis\n",
+    "- Soft- and Hard-Clustering comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -44,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/christianbergen/Documents/prog/aaa21\n"
+      "C:\\Users\\Alex\\PycharmProjects\\aaa21\n"
      ]
     }
    ],
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
     }
    },
    "source": [
-    "# 1. Cluster - Trip distance, duration and starting time"
+    "# 1. Feature Combination - Trip distance, duration and starting time"
    ]
   },
   {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -188,7 +189,7 @@
       "text/plain": "   Trip Kilometers  Trip Minutes  Trip Start Hour\n0             3.70       17.0000               17\n1             1.77        6.0000               21\n4             3.06       11.0000                9\n5             2.41       11.0000               13\n6             2.41       13.7167                9",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Trip Kilometers</th>\n      <th>Trip Minutes</th>\n      <th>Trip Start Hour</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3.70</td>\n      <td>17.0000</td>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1.77</td>\n      <td>6.0000</td>\n      <td>21</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3.06</td>\n      <td>11.0000</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2.41</td>\n      <td>11.0000</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2.41</td>\n      <td>13.7167</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 80,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,8 +373,8 @@
     "Since taking too many clusters is not useful, and the curve begins to flatten after 6 iterations,\n",
     "taking 6 clusters seems a decent choice.\n",
     "The Silhouette Score shows a more wavy graph.\n",
-    "Looking at the score for 6 clusters indicates, that this should be fine choice.\n",
-    "The score is pretty even among 5 to 9 clusters and is much lower for 3 and 4 for clusters.\n",
+    "Looking at the score for 6 clusters indicates, that this should be fine choice, too.\n",
+    "The score drops for more than 6 clusters and is not much lower for fewer numbers of clusters.\n",
     "\n",
     "This cross-validates a number of 6 clusters for the following soft-cluster analysis."
    ]
@@ -391,23 +392,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2671975 entries, 0 to 3295674\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column           Dtype  \n",
+      "---  ------           -----  \n",
+      " 0   Trip Kilometers  float64\n",
+      " 1   Trip Minutes     float64\n",
+      " 2   Trip Start Hour  int64  \n",
+      "dtypes: float64(2), int64(1)\n",
+      "memory usage: 81.5 MB\n"
+     ]
+    }
+   ],
    "source": [
     "# create copy of chicago_df_q to keep save from unintentional changes\n",
     "\n",
     "gmm_df = chicago_df_q.copy()\n",
-    "gmm.df.info()"
+    "gmm_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -419,6 +437,35 @@
     "                 n_cluster=6,\n",
     "                 )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The function above clustered the data points into 6 clusters with the help of GMM and EM-Algorithm.\n",
+    "It added a column to the dataframe which indicates the cluster affiliation.\n",
+    "Additionally, one column per cluster is added, which hold the probabilities of cluster affiliations for each data\n",
+    "ponint."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Next we visualize the resulting clusters.\n",
+    "At first, we start by creating two-dimensional Scatterplots for all three possible feature combinations.\n",
+    "This approach visualizes the feature interdependencies for each cluster."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -497,6 +544,20 @@
    "source": [
     "clustering.plot_clusters_scatter(gmm_df, \"Trip Minutes\", \"Trip Kilometers\", \"Clusters\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We follow this up by observing each feature individually.\n",
+    "For this purpose, we create Boxplots for all 6 Clusters per feature.\n",
+    "This simplifies the resulting analysis."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -743,8 +804,83 @@
     }
    ],
    "source": [
-    "gmm_df.head()\n"
+    "gmm_df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The resulting head of the dataframe above shows what makes soft-clustering special.\n",
+    "Instead of just joining a data point to one specific cluster, probabilities of belonging to each cluster\n",
+    "get calculated.\n",
+    "The 'cluster'-column then indicates the cluster number with the highest probability, which makes it easier\n",
+    "to visualize and comparable to the upcoming hard-clustering results."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Soft Clustering - Summary & Analysis\n",
+    "\n",
+    "We summarized the results of the clustering in the table below. The values used are the 25% - 75% quantile.\n",
+    "\n",
+    "| Cluster | Trip Start Hour | Trip Kilometers | Trip Minutes | # Trips | % Trips |\n",
+    "|---|---|---|---|---|---|\n",
+    "| 0 | 0 - 2 | 1 - 4 | 5 - 10 | 263140 | 9.8|\n",
+    "| 1 | 19 - 22 | 1 - 3 | 5 - 9 | 585590 | 21.9|\n",
+    "| 2 | 18 - 22 | 4 - 7 | 4 - 18 | 393587 | 14.7 |\n",
+    "| 3 | 10 - 15 | 1 - 2 | 4 - 7 | 657827 | 19.0|\n",
+    "| 4 | 5 - 14 | 4 - 10 | 16 - 22 | 263706 | 9.9|\n",
+    "| 5 | 9 - 15 | 2 - 4 | 10 - 13 | 508125 | 19.0 |\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Part of our analysis is to label the resulting clusters in perspective of different customer pattern.\n",
+    "Our suggestions are listed below:\n",
+    "\n",
+    "Cluster 0 - **After Party Customers**\n",
+    "\n",
+    "Night trips with short and middle distance and duration.\n",
+    "Small cluster-size.\n",
+    "\n",
+    "Cluster 1  - **Urban Evening Customers**\n",
+    "\n",
+    "Short trips taking place at around evening.  Large cluster-size.\n",
+    "\n",
+    "Cluster 2  - **Suburban Evening Customers**\n",
+    "\n",
+    "Take place at the same time as Cluster 1, but has longer trips and a lower cluster-size.\n",
+    "\n",
+    "Cluster 3  - **Daytime Short-Term Customers**\n",
+    "\n",
+    "Has the shortest trips on average that take place from morning till afternoon, mainly during midday.\n",
+    "Has the largest cluster-size.\n",
+    "\n",
+    "Cluster 4  - **Long Distance Customers**\n",
+    "\n",
+    "Small cluster-sized with very long trips, that take place throughout the whole day.\n",
+    "\n",
+    "Cluster 5  - **Daytime Medium-Distance Customers**\n",
+    "\n",
+    "Take place at the same time as cluster 3, but consists mainly of middle long trips and has a larger cluster-size.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -786,7 +922,7 @@
     "\n",
     "For a good comparison between our soft- and hard-clustering results, taking also 6 clusters for\n",
     "K-Means seems reasonable.\n",
-    "To further cross-validate this decision make use of the 'Elbow Method'.\n",
+    "To further cross-validate this decision we make use of the 'Elbow Method'.\n",
     "The Elbow Method is a visualization of the distortion scores where k-Means is run k-times.\n",
     "A good fit of k can be found, where the distortion starts decreasing linearly."
    ]
@@ -846,12 +982,13 @@
    "source": [
     "The so called 'Elbow' can be found at 3 clusters.\n",
     "Even though, taking 6 clusters is also reasonable.\n",
-    "The curve starts to further flatten after 6 cluster, which means, that taking more clusters leads to over-fitting."
+    "The curve starts to further flatten after 6 cluster, which means, that taking more clusters leads to over-fitting.\n",
+    "We took 6 clusters to have better comparison between soft- and hard-clustering results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 66,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -884,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 67,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -894,8 +1031,33 @@
    "source": [
     "kmeans_df = clustering.get_clusters_kmeans(kmeans_df,\n",
     "                 n_cluster=6,\n",
-    "                )\n"
+    "                )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The function above clustered the data points into 6 clusters with the help of k-Means-Algorithm.\n",
+    "It added a column to the dataframe which indicates the cluster affiliation."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Just like at soft-clustering, we created Scatter- and Boxplots for our analysis."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -1067,17 +1229,74 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "#### Hard Clustering - Summary & Analysis\n",
+    "\n",
+    "We summarized the results of the clustering in the table below. The values used are the 25% - 75% quantile.\n",
+    "\n",
+    "| Cluster | Trip Start Hour | Trip Kilometers | Trip Minutes | # Trips | % Trips\n",
+    "|---|---|---|---|---|---|\n",
+    "| 0 | 18 - 21 | 1 - 2 | 4 - 8 | 647622 | 24.2\n",
+    "| 1 | 3 - 10 | 3 - 8 | 13 - 18 | 261744 | 9.8\n",
+    "| 2 | 15 - 20 | 5 - 10 | 18 - 23 | 238386 | 8.9\n",
+    "| 3 | 16 - 21 | 3 - 5 | 11 - 14 | 518638 | 19.4\n",
+    "| 4 | 9 - 13 | 1 - 2 | 5 - 9 | 706091 | 26.4\n",
+    "| 5 | 0 - 3 | 1 - 4 | 4 - 9 | 299494 | 11.2\n"
+   ],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We also labeled our resulting hard-clustered results:\n",
+    "\n",
+    "Cluster 0 - **Urban Evening Customers**\n",
+    "\n",
+    "Short trips taking place at around evening.  Large cluster-size. (Comparable to Soft-Cluster 1)\n",
+    "\n",
+    "Cluster 1  - **Early Long-Distance Customers**\n",
+    "\n",
+    "Trips taking place from night till midday, mainly around late morning. It includes trips with middle to long distance and duration and has a low cluster-size.\n",
+    "\n",
+    "Cluster 2  - **Long-Distance After-Work Customers**\n",
+    "\n",
+    "Longest trips. Taking place from midday till night, mainly around evening. Has the smallest cluster-size.\n",
+    "\n",
+    "Cluster 3  - **Early Medium-Distance Customers**\n",
+    "\n",
+    "Comparable daytime to cluster 2, but with short and middle long trips. Includes around twice as much trips as cluster 2.\n",
+    "\n",
+    "Cluster 4  - **Daytime Short-Term Customers**\n",
+    "\n",
+    "Comparable to Soft-Cluster 3. Also has the largest cluster-size and equal feature distributions.\n",
+    "\n",
+    "Cluster 5  - **After Party Customers**\n",
+    "\n",
+    "Comparable to Soft-Cluster 0."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## 2nd Cluster - City Center Distance Pickup/Dropoff and Kilometer per Hour\n",
     "---\n",
     "\n",
     "We use the same approach as for our first Cluster."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -1375,7 +1594,7 @@
    "outputs": [],
    "source": [
     "#Live version -> Very Long runtime\n",
-    "clustering.get_bic(scoring_df , 8, save_plot=True, save_name=\"bic_kmh\")"
+    "#clustering.get_bic(scoring_df , 8, save_plot=True, save_name=\"bic_kmh\")"
    ]
   },
   {
@@ -2378,15 +2597,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 94,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Soft- and Hard-Clustering comparison\n",
+    "Finishing our Cluster-Analysis, we want to compare our Soft- and Hard-Clustering results.\n",
+    "...\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
